# modern-bert-score

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  prepare_model.py  pyproject.toml
.github/workflows/: ci.yml
docs/: BERTScore.rst  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
modern_bert_score/: README.md  __init__.py  bert_score.py  consts.py  inference.py
tests/: test_bert_score.py
