[project]
name = "modern-bert-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.9.1",
]

[project.optional-dependencies]
vllm = ["vllm>=0.16.0"]
dev = [
    "ruff",
    "mypy",
    "flake8",
    "pytest-cov"
]

[tool.setuptools.packages.find]
include = ["modern_bert_score*"]

[tool.ruff]
line-length = 79
extend-include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "prepare_model\\.py$",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
